# celm-profilprojekt

./: .gitignore  .gitlab-ci.yml  20260221 doku.tex  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Eigentokens_RedcomponentDB_Interim_Presentation_Consolidated.pptx  LICENSE  README.md  SECURITY.md  build.bat  buildsystem.xml  configure.sh  doku.bib  doku.tex
docs/: 20250225 zihpub.cls  20251120_Eigentokens_Expose.md  20260221 doku.tex  20260221 doku_final.bib  20260221 doku_final.tex  20260225 doku.bib  20260225 doku.tex  20260225 doku_2.bib  20260225 doku_2.tex  20260225 doku_3.bib  20260225 doku_3.tex  architektur-erweiterung.txt  zihpub.cls
docs/archive/: Eigentoken_Language_Model.md
docs/english/: LICENSE
docs/german/: LICENSE
docs/presentation/: 20260221 Eigentokens_ComdareDB_Final_Presentation_EN_FINAL.pptx  20260221 Eigentokens_Comdare_Interim_Presentation_FINAL.pptx  20260226 ComdareDB_Final_Presentation_ProfessorGuidance_v3.pptx
presentation/: 20260128 Deduplication_Interim_Presentation.pptx  20260221 Comdare_Eigentokens_Final_Presentation_deprecated.pptx  20260221 Eigentokens_ComdareDB_Final_Presentation_deprecated.pptx  20260221 Eigentokens_Comdare_Interim_Presentation_FINAL.pptx  Eigentokens_ComdareDB_Interim_Presentation_Consolidated.pptx  Eigentokens_ComdareDB_TalkNotes_30min_DE.txt  Eigentokens_RedcomponentDB_Interim_Presentation.pptx  Eigentokens_RedcomponentDB_Interim_Presentation_v2.pptx  Eigentokens_RedcomponentDB_TalkNotes_30min_DE.txt
sessions/: 20260107-00-00-000725-redcomponent-celm-buildsystem-phaseschema-migration.md  20260112-15-40-001089-redcomponent-celm-readme-install-update.md  20260112-15-45-001090-redcomponent-celm-rehome.md  20260112-15-45-001091-redcomponent-celm-rehome.md  20260115-12-07-001476-redcomponent-celm-cmake-naming-align.md  20260115-12-07-001477-redcomponent-celm-cmake-naming-align.md  20260116-14-25-001596-redcomponent-celm-wrapper-cleanup.md  20260117-05-33-001810-redcomponent-celm-module-source-restore.md  20260117-05-33-001811-redcomponent-celm-product-alignment.md  20260117-07-12-001866-redcomponent-celm-buildsystem-targets.md  20260205-07-46-19-001867-redcomponent-celm-move-products.md  20260220-session-S2634-K14-projekt-setup-eula-deployment.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/io/: CMakeLists.txt
tests/: CMakeLists.txt  README.md
tests/core/: CMakeLists.txt  test_example.cpp
tests/io/: CMakeLists.txt
